[gd_scene load_steps=6 format=2]

[ext_resource path="res://Lighthouse/2pTheme.tres" type="Theme" id=1]
[ext_resource path="res://Antenna/Plane.tscn" type="PackedScene" id=2]
[ext_resource path="res://Antenna/antenna_player.gd" type="Script" id=3]
[ext_resource path="res://Antenna/VariableAntenna.tscn" type="PackedScene" id=4]
[ext_resource path="res://Antenna/ReferenceAntenna.tscn" type="PackedScene" id=5]

[node name="AntennaPlayer" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="SceneHolder" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ReferenceAntenna" parent="SceneHolder" instance=ExtResource( 5 )]
position = Vector2( 539, 263 )

[node name="VariableAntenna" parent="SceneHolder" instance=ExtResource( 4 )]
position = Vector2( 540, 305 )

[node name="Plane" parent="SceneHolder" instance=ExtResource( 2 )]
position = Vector2( 822, 291 )

[node name="Plane2" parent="SceneHolder" instance=ExtResource( 2 )]
position = Vector2( 331, 447 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 152.0
offset_bottom = 112.0

[node name="RefCounted" type="Button" parent="VBoxContainer"]
offset_right = 240.0
offset_bottom = 22.0
theme = ExtResource( 1 )
text = "RefCounted"

[node name="Variable" type="Button" parent="VBoxContainer"]
offset_top = 26.0
offset_right = 240.0
offset_bottom = 48.0
theme = ExtResource( 1 )
text = "Variable"

[node name="Both" type="Button" parent="VBoxContainer"]
offset_top = 52.0
offset_right = 240.0
offset_bottom = 74.0
theme = ExtResource( 1 )
text = "Both"

[node name="Continous" type="CheckButton" parent="VBoxContainer"]
offset_top = 78.0
offset_right = 240.0
offset_bottom = 118.0
theme = ExtResource( 1 )
text = "Continuous"

[node name="IntelSlider" type="HSlider" parent="VBoxContainer"]
offset_top = 122.0
offset_right = 240.0
offset_bottom = 138.0
theme = ExtResource( 1 )
max_value = 6.0
rounded = true
scrollable = false
tick_count = 7
ticks_on_borders = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 142.0
offset_right = 240.0
offset_bottom = 164.0
theme = ExtResource( 1 )

[node name="BackButton" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_right = 92.0
offset_bottom = 22.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Back"

[node name="SceneLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
offset_left = 96.0
offset_top = 3.0
offset_right = 144.0
offset_bottom = 19.0
theme = ExtResource( 1 )
text = "1/4"

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 148.0
offset_right = 240.0
offset_bottom = 22.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
text = "Next"

[connection signal="pressed" from="VBoxContainer/RefCounted" to="." method="_on_Blink_pressed"]
[connection signal="pressed" from="VBoxContainer/Variable" to="." method="_on_Sweep_pressed"]
[connection signal="pressed" from="VBoxContainer/Both" to="." method="_on_Both_pressed"]
[connection signal="toggled" from="VBoxContainer/Continous" to="." method="_on_Continous_toggled"]
[connection signal="value_changed" from="VBoxContainer/IntelSlider" to="." method="_on_IntelSlider_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
